--- a/styles/globals.css
+++ b/styles/globals.css
@@ -32,6 +32,6 @@
   }
 
   .playerIcon {
-    @apply transition ease-out transform hover:scale-105 hover:text-white;
+    //@apply transition ease-out transform hover:scale-105 hover:text-white;
   }
 }
